reference_labs/white_goods/runtime/openshift/network-policy-allow-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: data-source-harness-allow-internal
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: data-source-harness
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              data-harness-client: allowed
      ports:
        - {protocol: TCP, port: 8080}
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              data-harness-source: allowed
      ports:
        - {protocol: TCP, port: 5432}
        - {protocol: TCP, port: 9000}
        - {protocol: TCP, port: 9092}
        - {protocol: TCP, port: 9200}
        - {protocol: TCP, port: 8080}
